--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Download source
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Install Crystal
         uses: crystal-lang/install-crystal@v1
       - name: Run tests
